--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@next/font": "^13.0.3",
     "next": "13.0.3",
     "next-pwa": "^5.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
